place dummy buildings

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -4,11 +4,12 @@
 
     <section class="buildings">
         <ul>
-            <li>Building 1</li>
-            <li>Building 2</li>
-            <li>Building 3</li>
-            <li>Building 4</li>
-            <li>Building 5</li>
+            <li data-color="#ff0000" data-size="5,1,3">Building 1</li>
+            <li data-color="#00ff00" data-size="10,6,6">Building 2</li>
+            <li data-color="#0000ff" data-size="3,3,3">Building 3</li>
+            <li data-color="#ffff00" data-size="2,1,5">Building 4</li>
+            <li data-color="#ff00ff" data-size="4,5,6">Building 5</li>
+            <li data-color="#00ffff" data-size="2,2,2">Building 6</li>
         </ul>
     </section>
 
