interface and icons

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -122,7 +122,9 @@
 </head>
 <body>
 
-	@@include('./pages/index.html')
+	<section id="canvas" class="canvas-wrapper"></section>
+
+	@@include('./components/interface.html')
 	@@include('./modals.html')
 	@@include('./icons/icons.html')
 
