--- a/src/html/panels/castle.html
+++ b/src/html/panels/castle.html
@@ -1,4 +1,5 @@
-<section class="panel">
+<section class="panel" data-panel="castle">
     <h1>Castle panel</h1>
-    <button name="close">Close</button>
+    
+    <section class="building-manager"></section>
 </section>
