--- a/src/html/panels/castle.html
+++ b/src/html/panels/castle.html
@@ -1,5 +1,9 @@
 <section class="panel" data-panel="castle">
-    <h1>Castle panel</h1>
-    
-    <section class="building-manager"></section>
+    <header class="building-manager" data-manager="building"></header>
+    <section class="panel-content">
+        
+    </section>
+    <footer>
+        <button name="close"><svg><use xlink:href="#icon-back" /></svg></button>
+    </footer>
 </section>
