--- a/src/html/panels/castle.html
+++ b/src/html/panels/castle.html
@@ -1,9 +1,9 @@
 <section class="panel" data-panel="castle">
-    <header class="building-manager" data-manager="building"></header>
+    <header data-manager></header>
     <section class="panel-content">
-        
+
     </section>
     <footer>
-        <button name="close"><svg><use xlink:href="#icon-back" /></svg></button>
+        <button class="btn-sq" name="close"><svg class="icon"><use xlink:href="#icon-back" /></svg></button>
     </footer>
 </section>
